--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -166,6 +166,8 @@ Vagrant.configure("2") do |config|
     cfg.winrm.timeout = 300
     cfg.winrm.retry_limit = 20
     cfg.vm.network :private_network, ip: "192.168.38.103", gateway: "192.168.38.1", dns: "192.168.38.102"
+    cfg.vm.network :forwarded_port, host: 3390, guest: 3389
+
 
     cfg.vm.provision "shell", path: "scripts/fix-second-network.ps1", privileged: true, args: "-ip 192.168.38.103 -dns 8.8.8.8 -gateway 192.168.38.1" 
     cfg.vm.provision "shell", path: "scripts/provision.ps1", privileged: false
@@ -232,6 +234,7 @@ Vagrant.configure("2") do |config|
     cfg.winrm.timeout = 1200
     cfg.winrm.retry_limit = 20
     cfg.vm.network :private_network, ip: "192.168.38.104", gateway: "192.168.38.1", dns: "192.168.38.102"
+    cfg.vm.network :forwarded_port, host: 3391, guest: 3389
 
     cfg.vm.provision "shell", path: "scripts/fix-second-network.ps1", privileged: false, args: "-ip 192.168.38.104 -dns 8.8.8.8 -gateway 192.168.38.1" 
     cfg.vm.provision "shell", path: "scripts/MakeWindows10GreatAgain.ps1", privileged: false
